--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,19 @@ project(server)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
 
-link_directories(/usr/local/lib/)
+find_package(libfreenect REQUIRED)
+find_package(OpenCV REQUIRED)
+
+include_directories(${FREENECT_INCLUDE_DIRS})
 
 file(GLOB KINECT_API_SOURCES
 "api/KinectApi.h"
 "api/KinectApi.cpp"
+"model/Kinect.h"
+"model/Kinect.cpp"
 )
 
-include_directories(api)
+set(CMAKE_INCLUDE_PATH /usr/local/lib)
 
 set(KINECT_API_SERVER_SOURCES
 main.cpp
@@ -20,4 +25,4 @@ main.cpp
 add_executable(kinect_server
 ${KINECT_API_SERVER_SOURCES})
 
-target_link_libraries(kinect_api_server pistache pthread)
+target_link_libraries(kinect_server pistache pthread freenect freenect_sync ${OpenCV_LIBS})
